--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -82,14 +81,15 @@
                                     onchange="" cols="40" rows="10" class="standard"
                                     placeholder="お問い合わせ内容をご記載ください"></textarea>
                             </div>
-                            <div class="form-field  CustomObject1718092319464 required">
+                            <div class="form-field CustomObject1718092319464 required">
                                 <label for="1068932_534880pi_1068932_534880">当社の個人情報保護方針に同意の上、送信してください。</label>
-                                <span class="value"><span><input type="checkbox"
+                                <p class="parts_ckbox"><span class="value"><input type="checkbox"
                                             name="1068932_534880pi_1068932_534880_6663358"
                                             id="1068932_534880pi_1068932_534880_6663358" value="6663358"
                                             onchange=""><label class="inline"
-                                            for="1068932_534880pi_1068932_534880_6663358">同意</label></span></span>
-                                <small><a class="privacy-link" href="https://www.pro-vision.jp/privacy/"target="_top">個人情報保護方針</a>に同意する</small>
+                                            for="1068932_534880pi_1068932_534880_6663358">同意</label></span>
+                                            <small><a class="privacy-link" href="https://www.pro-vision.jp/privacy/"target="_top">個人情報保護方針</a>に同意する</small>
+                                </p>
                             </div>
                             <p style="position:absolute; width:190px; left:-9999px; top: -9999px;visibility:hidden;">
                                 <label for="pi_extra_field">Comments</label>
