fix snytax error

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                     </div>
                     <div class="right-column">
                         <form action="#" method="post"id="pardot-form"><!--actionは空にしてある-->
+                            <div id="form-error-summary"></div>
                             <div class="form-field  last_name required">
                                 <label for="1068932_534862pi_1068932_534862">お名前(姓)</label>
                                 <input type="text" name="1068932_534862pi_1068932_534862"
@@ -106,6 +107,6 @@
     <footer>
         <small class="copy">© ProVision Inc. All Rights Reserved.</small>
     </footer>
-    <script src="common.js" defer></script>
+    <script src="common2.js" defer></script>
 </body>
 </html>
