--- a/index.html
+++ b/index.html
@@ -209,6 +209,6 @@
     <footer>
       <small class="copy">© ProVision Inc. All Rights Reserved.</small>
     </footer>
-    <script src="common2.js" defer></script>
+    <script src="common.js" defer></script>
   </body>
 </html>
